[gd_scene load_steps=13 format=3 uid="uid://c4mxg6pn32x0l"]

[ext_resource type="FontFile" uid="uid://dltdgwcyvk5uo" path="res://assets/font/normal_400.ttf" id="1_073ca"]
[ext_resource type="Script" path="res://scripts/dialogue_engine.gd" id="1_m5xj3"]
[ext_resource type="FontFile" uid="uid://cf3twlhcqippa" path="res://assets/font/normal_700.ttf" id="2_wvmka"]
[ext_resource type="Texture2D" uid="uid://c57wwdojksc2" path="res://assets/UI/dialogue_proceed_icon.png" id="4_b1kbq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdy3a"]
bg_color = Color(0.14902, 0.156863, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0862745, 0.0901961, 0.101961, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 20
shadow_offset = Vector2(0, 10)

[sub_resource type="Animation" id="Animation_dtnk8"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, -325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LowerBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 1105)]
}

[sub_resource type="Animation" id="Animation_j4pvs"]
resource_name = "proceed"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBox/Proceed:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LowerBox/Proceed:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_exn00"]
resource_name = "upper_and_lower_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBox:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(25, -325), Vector2(25, 25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LowerBox:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(25, 1105), Vector2(25, 755)]
}

[sub_resource type="Animation" id="Animation_sf1o8"]
resource_name = "upper_and_lower_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBox:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(25, 25), Vector2(25, -325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LowerBox:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(25, 755), Vector2(25, 1105)]
}

[sub_resource type="Animation" id="Animation_wmecp"]
resource_name = "upper_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBox:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(25, -325), Vector2(25, 25)]
}

[sub_resource type="Animation" id="Animation_pj0x8"]
resource_name = "upper_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBox:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 0.4),
"update": 0,
"values": [Vector2(25, 25), Vector2(25, -325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8oxi0"]
_data = {
"RESET": SubResource("Animation_dtnk8"),
"proceed": SubResource("Animation_j4pvs"),
"upper_and_lower_in": SubResource("Animation_exn00"),
"upper_and_lower_out": SubResource("Animation_sf1o8"),
"upper_in": SubResource("Animation_wmecp"),
"upper_out": SubResource("Animation_pj0x8")
}

[node name="DialogueEngine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m5xj3")

[node name="UpperBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 25.0
offset_top = -325.0
offset_right = 1895.0
offset_bottom = -25.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sdy3a")

[node name="Portrait" type="TextureRect" parent="UpperBox"]
z_index = 1
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 250.0
expand_mode = 2
stretch_mode = 5

[node name="Text" type="RichTextLabel" parent="UpperBox"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -29.5
offset_right = 1820.0
offset_bottom = 29.5
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_073ca")
theme_override_fonts/bold_font = ExtResource("2_wvmka")
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 48
fit_content = true

[node name="Proceed" type="TextureRect" parent="UpperBox"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(80, 80)
texture = ExtResource("4_b1kbq")
expand_mode = 1
stretch_mode = 5

[node name="LowerBox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 25.0
offset_top = 1105.0
offset_right = 1895.0
offset_bottom = 1405.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sdy3a")

[node name="Portrait" type="TextureRect" parent="LowerBox"]
z_index = 1
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 250.0
expand_mode = 2
stretch_mode = 5

[node name="Text" type="RichTextLabel" parent="LowerBox"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -29.5
offset_right = 1820.0
offset_bottom = 29.5
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_073ca")
theme_override_fonts/bold_font = ExtResource("2_wvmka")
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 48
fit_content = true

[node name="Proceed" type="TextureRect" parent="LowerBox"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(80, 80)
texture = ExtResource("4_b1kbq")
expand_mode = 1
stretch_mode = 5

[node name="DialogueBoxAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8oxi0")
}
